--- a/demo/provisioning/Vagrantfile
+++ b/demo/provisioning/Vagrantfile
@@ -7,6 +7,7 @@ $controllerscript = <<-script
     sudo apt update -y
     sudo apt install -y ansible 
     sudo apt install -y git
+#    git clone git@github.com:srikanthkakumanu/cguru.git
 script
 
 class Configurator 
