--- a/demo/provisioning/ansible/roles/openJDK/tasks/main.yml
+++ b/demo/provisioning/ansible/roles/openJDK/tasks/main.yml
@@ -1,9 +1,9 @@
 - name: Get Open JDK TAR ball
   become: yes
   get_url:
-    url: https://download.java.net/java/GA/jdk15.0.1/51f4f36ad4ef43e39d0dfdbaf6549e32/9/GPL/openjdk-15.0.1_linux-x64_bin.tar.gz
+    url: https://download.java.net/java/GA/jdk15.0.2/0d1cfde4252546c6931946de8db48ee2/7/GPL/openjdk-15.0.2_linux-x64_bin.tar.gz
     dest: /etc/open-jdk15.tar.gz
-    checksum: sha256:83ec3a7b1649a6b31e021cde1e58ab447b07fb8173489f27f427e731c89ed84a
+    checksum: sha256:91ac6fc353b6bf39d995572b700e37a20e119a87034eeb939a6f24356fbcd207
     validate_certs: false
     mode: 0644
     
@@ -21,12 +21,26 @@
 - name: Update Alternatives for JAVA
   alternatives:
     name: java
-    path: /usr/lib/java15/jdk-15.0.1/bin/java
+    path: /usr/lib/java15/jdk-15.0.2/bin/java
     link: /usr/bin/java
     priority: 20000
 
-- name: Set JAVA_HOME Environment variable
-  blockinfile:
-    insertafter: EOF
-    path: /etc/environment
-    block: export JAVA_HOME=/usr/lib/java15/jdk-15.0.1
+- name: set JAVA_HOME
+  shell: "echo $JAVA_HOME"
+  environment:
+    JAVA_HOME: /usr/lib/java15/jdk-15.0.2
+  register: java_home
+
+- name: Print JAVA_HOME
+  debug: 
+    var: java_home.stdout
+
+- name: set JAVA_HOME in .profile
+  insertafter: EOF
+  lineinfile:
+    path: /home/vagrant/.profile
+    state: present
+    line: "{{ item }}"
+  with_items:
+  - 'export JAVA_HOME=/usr/lib/java15/jdk-15.0.2'
+  - 'export PATH=$PATH:$JAVA_HOME/bin'
