--- a/demo/provisioning/ansible/roles/oracleJDK/tasks/main.yml
+++ b/demo/provisioning/ansible/roles/oracleJDK/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Get Oracle JDK TAR ball
   become: yes
   get_url:
-    url: https://download.oracle.com/otn-pub/java/jdk/15.0.1%2B9/51f4f36ad4ef43e39d0dfdbaf6549e32/jdk-15.0.1_linux-x64_bin.tar.gz
+    url: https://download.oracle.com/otn/java/jdk/15.0.1%2B9/51f4f36ad4ef43e39d0dfdbaf6549e32/jdk-15.0.1_linux-x64_bin.tar.gz
 #    headers: 'Cookie:oraclelicense=accept-securebackup-cookie'
     headers: {"Cookie": {"oraclelicense": accept-securebackup-cookie}}
     dest: /etc/oracle-jdk15.tar.gz
@@ -32,3 +32,9 @@
     insertafter: EOF
     path: /etc/environment
     block: export JAVA_HOME=/usr/lib/java15/jdk-15.0.1
+
+- name: Add JAVA_HOME Environment variable to PATH
+  blockinfile:
+    insertafter: EOF
+    path: /etc/environment
+    block: export PATH=$PATH:$JAVA_HOME/bin
