--- a/demo/provisioning/ansible/roles/gradle/tasks/main.yml
+++ b/demo/provisioning/ansible/roles/gradle/tasks/main.yml
@@ -37,3 +37,8 @@
   - 'export GRADLE_HOME=/usr/lib/gradle/gradle-6.8.3'
   - 'export PATH=$PATH:$GRADLE_HOME/bin'
 
+- name: source .profile file in the shell
+  sudo: no
+  shell: source /home/vagrant/.profile
+  args: 
+    executable: /bin/bash
