--- a/demo/provisioning/ansible/roles/openJDK/tasks/main.yml
+++ b/demo/provisioning/ansible/roles/openJDK/tasks/main.yml
@@ -6,6 +6,16 @@
     update_cache: true
     state: present
 
+- name: set JAVA_HOME in .profile
+  lineinfile:
+    path: /home/vagrant/.profile
+    state: present
+    line: "{{ item }}"
+  with_items:
+  - 'export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64'
+  - 'export PATH=$PATH:$JAVA_HOME/bin'
+
+
 # - include_vars: ../vars/main.yml
 
 # - name: Get Open JDK {{ JDK_VERSION }} TAR ball
