componentized openjdk installations

--- a/demo/provisioning/ansible/roles/openJDK/tasks/main.yml
+++ b/demo/provisioning/ansible/roles/openJDK/tasks/main.yml
@@ -1,104 +1,6 @@
 ---
-
-# Install Open JDK 8
-- name: Install public key from JFrog openJDK
-  apt_key:
-    url: https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public
-    state: present
-
-- name: Add JFrog openJDK repository
-  become: true
-  apt_repository:
-    repo: 'deb https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/ buster main'
-    update_cache: yes
-    state: present
-
-- name: Install JFrog open JDK 8
-  become: true
-  apt:
-    name: adoptopenjdk-8-hotspot
-    update_cache: true
-    state: present
-
-- name: set JAVA_HOME in .profile
-  lineinfile:
-    path: /home/vagrant/.profile
-    state: present
-    line: "{{ item }}"
-  with_items:
-  - 'export JAVA_HOME=/usr/lib/jvm/adoptopenjdk-8-hotspot-amd64'
-  - 'export PATH=$PATH:$JAVA_HOME/bin'
+- import_playbook: jfrog-openjdk8.yml
 
 
-# Open JDK 11 Installation
-# - name: Install Open JDK 11
-#   apt:
-#     name: openjdk-11-jdk
-#     update_cache: true
-#     state: present
-
-# - name: set JAVA_HOME in .profile
-#   lineinfile:
-#     path: /home/vagrant/.profile
-#     state: present
-#     line: "{{ item }}"
-#   with_items:
-#   - 'export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64'
-#   - 'export PATH=$PATH:$JAVA_HOME/bin'
 
 
-# Parameterized Open JDK Installation
-
-# - include_vars: ../vars/main.yml
-
-# - name: Get Open JDK {{ JDK_VERSION }} TAR ball
-#   become: yes
-#   get_url:
-#     url: "{{ JDK_URL }}"
-#     dest: "{{ JDK_URL_DEST_FILE }}"
-#     checksum: sha256:"{{ JDK_SHA256_CHECKSUM }}"
-#     validate_certs: false
-#     mode: 0644
-    
-# - name: Make JAVA Directory
-#   file:
-#     path: "{{ JDK_EXTRACT_DIR }}"
-#     state: directory
-
-# - name: Unpack TAR ball
-#   unarchive:
-#     dest: "{{ JDK_EXTRACT_DIR }}"
-#     src: "{{ JDK_URL_DEST_FILE }}"
-#     remote_src: yes
-
-# - name: Update Alternatives for JAVA
-#   alternatives:
-#     name: java
-#     link: /usr/bin/java
-#     path: "{{JDK_ALTERNATIVES_FULL_PATH}}"
-#     # priority: 50
-
-# - name: set JAVA_HOME
-#   shell: "echo $JAVA_HOME"
-#   environment:
-#     JAVA_HOME: "{{JDK_HOME_DIR}}"
-#   register: java_home
-
-# - name: Print JAVA_HOME
-#   debug: 
-#     var: java_home.stdout
-
-# - name: set JAVA_HOME in .profile
-#   lineinfile:
-#     path: /home/vagrant/.profile
-#     state: present
-#     line: "{{ item }}"
-#   with_items:
-#   - 'export JAVA_HOME="{{JDK_HOME_DIR}}"'
-#   - 'export PATH=$PATH:$JAVA_HOME/bin'
-
-# - name: source .profile file in the shell
-#   become: no
-#   shell: source /home/vagrant/.profile
-#   args: 
-#     executable: /bin/bash
