--- a/demo/provisioning/ansible/roles/gradle/tasks/main.yml
+++ b/demo/provisioning/ansible/roles/gradle/tasks/main.yml
@@ -29,17 +29,17 @@
   debug: 
     var: gradle_home.stdout
 
-- name: set GRADLE_HOME in .profile
+- name: set GRADLE_HOME in /etc/environment
   lineinfile:
-    path: /home/vagrant/.profile
+    path: /etc/environment
     state: present
     line: "{{ item }}"
   with_items:
   - 'export GRADLE_HOME={{GRADLE_HOME_DIR}}'
   - 'export PATH=$PATH:$GRADLE_HOME/bin'
 
-- name: source .profile file in the shell
-  become: no
-  shell: source /home/vagrant/.profile
+- name: source /etc/environment
+  become: yes
+  shell: source /etc/environment
   args: 
     executable: /bin/bash
