--- a/demo/provisioning/ansible/roles/openJDK/tasks/openjdk-parameterized.yml
+++ b/demo/provisioning/ansible/roles/openJDK/tasks/openjdk-parameterized.yml
@@ -40,17 +40,18 @@
   debug: 
     var: java_home.stdout
 
-- name: set JAVA_HOME in .profile
+- name: set JAVA_HOME in /etc/environment
   lineinfile:
-    path: /home/vagrant/.profile
+#    path: /home/vagrant/.profile
+    path: /etc/environment
     state: present
     line: "{{ item }}"
   with_items:
   - 'export JAVA_HOME="{{JDK_HOME_DIR}}"'
   - 'export PATH=$PATH:$JAVA_HOME/bin'
-
-- name: source .profile file in the shell
-  become: no
-  shell: source /home/vagrant/.profile
+  
+- name: source /etc/environment
+  become: yes
+  shell: source /etc/environment
   args: 
     executable: /bin/bash
