--- a/demo/provisioning/ansible/roles/openJDK/tasks/openjdk11.yml
+++ b/demo/provisioning/ansible/roles/openJDK/tasks/openjdk11.yml
@@ -6,11 +6,18 @@
     update_cache: true
     state: present
 
-- name: set JAVA_HOME in .profile
+- name: set JAVA_HOME in /etc/environment
   lineinfile:
-    path: /home/vagrant/.profile
+#    path: /home/vagrant/.profile
+    path: /etc/environment
     state: present
     line: "{{ item }}"
   with_items:
   - 'export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64'
   - 'export PATH=$PATH:$JAVA_HOME/bin'
+
+- name: source /etc/environment
+  become: yes
+  shell: source /etc/environment
+  args: 
+    executable: /bin/bash
