--- a/demo/provisioning/ansible/roles/commons/tasks/main.yml
+++ b/demo/provisioning/ansible/roles/commons/tasks/main.yml
@@ -30,6 +30,55 @@
       - zip
       - unzip
 
+- name: Make ngrok Directory
+  file:
+    path: "/usr/lib/ngrok"
+    state: directory
+
+- name: Download ngrok 
+  get_url:
+    url: https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
+    dest: /etc/ngrok.zip
+    mode: 0644
+
+- name: unzip ngrok ZIP file
+  unarchive:
+    src: /etc/ngrok.zip
+    dest: /usr/lib/ngrok
+    remote_src: yes
+
+- name: set ngrok PATH in /etc/environment
+  lineinfile:
+#    path: /home/vagrant/.profile
+    path: /etc/environment
+    state: present
+    line: "{{ item }}"
+  with_items:
+  - 'export PATH=$PATH:/usr/lib/ngrok/ngrok'
+
+- name: source /etc/environment
+  become: yes
+  shell: source /etc/environment
+  args: 
+    executable: /bin/bash
+
+- name: Assign ngrok account auth token
+  become: yes
+  shell: "/usr/lib/ngrok/ngrok authtoken 1qsCUjLBDm8Sy5s6xpy8p4gKpa6_4a4GM638mPiVNaCe2hqms"
+  register: ngrok_auth_token
+
+- name: Print ngrok auth token assignment result
+  debug:
+    var: ngrok_auth_token
+
+# - name: Start ngrok 
+#   shell: /usr/lib/ngrok/ngrok http 8080
+#   register: ngrok_start_result
+
+# - name: Print ngrok Start Result
+#   debug:
+#     var: ngrok_start_result
+
 # - name: Install & setup sdkman and JDK 8
 #   script: ../files/sdkman-jdk-setup.sh
 
