--- a/demo/provisioning/ansible/ansible.cfg
+++ b/demo/provisioning/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-strategy = debug
+#strategy = debug
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o ConnectTimeout=20 -o PasswordAuthentication=no -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ServerAliveInterval=50 
