--- a/demo/provisioning/vagrant/Vagrantfile
+++ b/demo/provisioning/vagrant/Vagrantfile
@@ -2,10 +2,8 @@
 # vi: set ft=ruby :
 
 # Multi-Machine Environment mimicking production environment using Vagrant
-
 $controllerscript = <<-script
     sudo apt-get update -y
-    sudo apt-get upgrade -y
     sudo apt-get install -y ansible 
     sudo apt-get install -y git
     git clone https://github.com/srikanthkakumanu/cguru.git
@@ -19,10 +17,11 @@ class Configurator
         vm.network "private_network", ip: ip
     end
     # Defines VM settings such as cloning, memory, no.of CPUs
-    def self.settings(vb, clone, memory, cpus)
+    def self.settings(vb, clone, memory, cpus, name)
         vb.linked_clone = clone
         vb.memory = memory
         vb.cpus = cpus
+        vb.name = name
     end
     # Box Provisions based on condition
     def self.provision(vm, isController)
@@ -35,18 +34,20 @@ end
 
 Vagrant.configure("2") do |config|
 
-    # Configuring own SSH Key
-    config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys"
-    config.ssh.private_key_path = ["~/.ssh/id_rsa", "~/.vagrant.d/insecure_private_key"]
-    config.ssh.insert_key = false
-
     config.vm.define "sandbox" do |sandbox|
+        # Configuring own SSH Key
+        config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys"
+        config.ssh.private_key_path = ["~/.ssh/id_rsa", "~/.vagrant.d/insecure_private_key"]
+        config.ssh.insert_key = false
+
         Configurator.box(sandbox.vm, "debian/buster64", "sandbox", "192.168.1.11")
+
         config.vm.provider "virtualbox" do |vb|
-            Configurator.settings(vb, true, 6144, 2)
+            Configurator.settings(vb, true, 6144, 2, "debianDevOps")
         end
         Configurator.provision(sandbox.vm, true)
     end    
 
-   end
+end
+
   
