--- a/demo/provisioning/ansible/roles/openJDK/tasks/openjdk-parameterized.yml
+++ b/demo/provisioning/ansible/roles/openJDK/tasks/openjdk-parameterized.yml
@@ -29,27 +29,20 @@
     path: "{{JDK_ALTERNATIVES_FULL_PATH}}"
     # priority: 50
 
-- name: set JAVA_HOME
-  shell: "echo $JAVA_HOME"
-  environment:
-    JAVA_HOME: "{{JDK_HOME_DIR}}"
+- name: set JAVA_HOME in /etc/profile
+  lineinfile:
+    path: /etc/profile
+    state: present
+    line: "{{ item }}"
+  with_items:
+  - 'JAVA_HOME="{{JDK_HOME_DIR}}"'
+  - 'PATH=$PATH:$JAVA_HOME/bin'
+
+- name: Check JAVA_HOME
+  command: "echo $JAVA_HOME"
   register: java_home
 
 - name: Print JAVA_HOME
   debug: 
     var: java_home.stdout
 
-- name: set JAVA_HOME in /etc/environment
-  lineinfile:
-#    path: /home/vagrant/.profile
-    path: /etc/environment
-    state: present
-    line: "{{ item }}"
-  with_items:
-  - 'export JAVA_HOME="{{JDK_HOME_DIR}}"'
-  - 'export PATH=$PATH:$JAVA_HOME/bin'
-  
-- name: source /etc/environment
-  shell: source /etc/environment
-  args: 
-    executable: /bin/bash
