--- a/demo/provisioning/ansible/roles/openJDK/tasks/openjdk11.yml
+++ b/demo/provisioning/ansible/roles/openJDK/tasks/openjdk11.yml
@@ -6,17 +6,19 @@
     update_cache: true
     state: present
 
-- name: set JAVA_HOME in /etc/environment
+- name: set JAVA_HOME in /etc/profile
   lineinfile:
-#    path: /home/vagrant/.profile
-    path: /etc/environment
+    path: /etc/profile
     state: present
     line: "{{ item }}"
   with_items:
-  - 'export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64'
-  - 'export PATH=$PATH:$JAVA_HOME/bin'
+  - 'JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64'
+  - 'PATH=$PATH:$JAVA_HOME/bin'
 
-- name: source /etc/environment
-  shell: source /etc/environment
-  args: 
-    executable: /bin/bash
+- name: Check JAVA_HOME
+  command: "echo $JAVA_HOME"
+  register: java_home
+
+- name: Print JAVA_HOME
+  debug: 
+    var: java_home.stdout
